force-app/main/default/objects/Proprietario__c/Proprietario__c.object-meta.xml
<CustomObject>
    <description>Dados do proprietario.</description>
    <label>Proprietario</label>
    <nameField>
        <label>Nome de Proprietario</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Proprietarios</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>