force-app/main/default/objects/Proprietario__c/fields/Owners_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Owners_Phone_Number__c</fullName>
    <description>Numero de telefone do proprietario.</description>
    <inlineHelpText>Numero de telefone do proprietario.</inlineHelpText>
    <label>Telefone_do_Proprietario</label>
    <length>80</length>
    <type>Text</type>
</CustomField>