force-app/main/default/objects/Proprietario__c/fields/Search_Account__c.field-meta.xml
<CustomField>
    <fullName>Search_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Relacionamento de pesquisa com conta.</description>
    <inlineHelpText>Relacionamento de pesquisa com conta.</inlineHelpText>
    <label>Pesquisa_Conta</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Proprietarios</relationshipLabel>
    <relationshipName>Proprietarios</relationshipName>
    <type>Lookup</type>
</CustomField>