force-app/main/default/objects/Proprietario__c/fields/Whatsapp__c.field-meta.xml
<CustomField>
    <fullName>Whatsapp__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Selecione o tipo de contato.</description>
    <inlineHelpText>Selecione o tipo de contato.</inlineHelpText>
    <label>Whatsapp</label>
    <type>Checkbox</type>
</CustomField>